First steps in migration from URL to URI. Leads to some corner cases to discuss in normalizer / architecture of normalization.