@@ -22,6 +22,7 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import java.net.IDN;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -120,7 +121,7 @@ public class BasicURLNormalizer extends URLFilter {
         }
 
         try {
-            URL theUrl = new URL(urlToFilter);
+            URL theUrl = new URI(urlToFilter).toURL();
             String file = theUrl.getFile();
             String protocol = theUrl.getProtocol();
             String host = theUrl.getHost();
@@ -152,9 +153,18 @@ public class BasicURLNormalizer extends URLFilter {
                 hasChanged = true;
             }
             if (hasChanged) {
-                urlToFilter = new URL(protocol, host, port, file2).toString();
+                URI uri = new URI(
+                        protocol,
+                        null,     // userInfo
+                        host,
+                        port,
+                        file2,    // path
+                        null,     // query
+                        null      // fragment
+                );
+                urlToFilter = uri.toString();
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             return null;
         }
 
@@ -223,7 +233,7 @@ public class BasicURLNormalizer extends URLFilter {
         try {
             // Handle illegal characters by making a url first
             // this will clean illegal characters like |
-            final URL url = new URL(urlToFilter);
+            final URL url = new URI(urlToFilter).toURL();
 
             String query = url.getQuery();
             String path = url.getPath();
@@ -287,8 +297,8 @@ public class BasicURLNormalizer extends URLFilter {
                     + ((s = newQueryString) != null ? '?' + s : "")
                     + ((s = url.getRef()) != null ? '#' + s : "");
 
-        } catch (MalformedURLException e) {
-            LOG.warn("Invalid urlToFilter {}. {}", urlToFilter, e);
+        } catch (MalformedURLException | URISyntaxException e) {
+            LOG.warn("Invalid urlToFilter {}.", urlToFilter, e);
             return null;
         }
     }
